[package]
name = "mdbook-git-atom"
version = "0.1.0"
authors = ["Rachel Brindle <you@subluminal.net>"]
edition = "2018"
description = "mdBook preprocessor for generating an atom feed based off the git log."
homepage = "https://github.com/younata/mdbook-git-atom"
repository = "https://github.com/younata/mdbook-git-atom"
license = "MIT"
readme = "README.md"

[dependencies]
serde_json = "^1.0.0"
regex = "1.5.4"
git2 = "0.13"
mdbook = "^0.4"
toml = "0.5.7"
clap = "2.33.3"
atom_syndication = "0.10.0"
url = "2.2.2"
chrono = "0.4.19"
